--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
+    <link rel="stylesheet" href = "css/styles.css">
 </head>
 <body>
     <div class="app">
@@ -18,34 +19,34 @@
                 </div>
                 <div class="jabquiz__choices-box">
                     <ul class="jabquiz__choices">
-                     <li>
+                     <li class="jabquiz__choice">
                         <!-- dynamically with javascript -->
-                        <input type="radio" name="choice" class="jabquiz__input" id="choice0">
-                        <label for="choice0" class="jabquiz__label">
+                        <input type="radio" name="choice" class="jabquiz__input" id="choice1">
+                        <label for="choice1" class="jabquiz__label">
                         <i></i>
                         Martin Luther King
                         </label>
                      </li>
-                     <li>
+                     <li class="jabquiz__choice">
                         <!-- dynamically with javascript -->
-                        <input type="radio" name="choice" class="jabquiz__input" id="choice0">
-                        <label for="choice0" class="jabquiz__label">
+                        <input type="radio" name="choice" class="jabquiz__input" id="choice2">
+                        <label for="choice2" class="jabquiz__label">
                         <i></i>
                         Michael Jackson
                         </label>
                      </li>
-                     <li>
+                     <li class="jabquiz__choice">
                         <!-- dynamically with javascript -->
-                        <input type="radio" name="choice" class="jabquiz__input" id="choice0">
-                        <label for="choice0" class="jabquiz__label">
+                        <input type="radio" name="choice" class="jabquiz__input" id="choice3">
+                        <label for="choice3" class="jabquiz__label">
                         <i></i>
                         Opera Winfrey
                         </label>
                      </li>
-                     <li>
+                     <li class="jabquiz__choice">
                         <!-- dynamically with javascript -->
-                        <input type="radio" name="choice" class="jabquiz__input" id="choice0">
-                        <label for="choice0" class="jabquiz__label">
+                        <input type="radio" name="choice" class="jabquiz__input" id="choice4">
+                        <label for="choice4" class="jabquiz__label">
                         <i></i>
                         Tony Robins
                         </label>
